--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ vendor
 assets/docs/ref/W-meter-An_open-source_WLAN product_evaluation_framework.pdf
 run-cmd.log
 versions.json
+Dockerfile.working
