--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ assets/docs/ref/W-meter-An_open-source_WLAN product_evaluation_framework.pdf
 run-cmd.log
 versions.json
 Dockerfile.working
+Dockerfile.working2
