--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,5 +1,5 @@
 About Me:
-     - 'I am Vipin Madhavanunni, I loves programming and playing with Linux box. I have worked as a Software engineer at <a href="http://www.embedur.com/">embedUR systems</a> priviously. I got my Masters from <a href="http://www.annauniv.edu/">Anna University</a> and bachelor from <a href="http://www.bdu.ac.in/">Bharathidasan University</a>.'
+     - 'I am Vipin Madhavanunni, I love programming and playing with Linux box. I have worked as a Software engineer at <a href="http://www.embedur.com/">embedUR systems</a> previously. I got my Masters from <a href="http://www.annauniv.edu/">Anna University</a> and bachelor from <a href="http://www.bdu.ac.in/">Bharathidasan University</a>.'
      - 'Personally my pastimes are thinking, trekking, photography, hanging out with friends and a bit of social work.'
 about:
      - 'Remix of <a href="http://www.ybrikman.com/">Yevgeniy Brikman</a>, <a href="http://jmcglone.com/">Jonathan McGlone</a>, <a href="https://github.com/philipithomas/jekyll-resume">jekyll-resume</a> and <a href="https://github.com/vrypan/jekyll-post-via-web">Post via web</a>'
