--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ feed: "feed.xml"
 
 # Bio settings
 name: "Vipin Madhavanunni"
-slogan: "Programmer, traveler, Hiker and dreamer"
+slogan: "Programmer, traveler, hiker and dreamer"
 description: "The home page of Vipin Madhavanunni."
 thumbnail_path: "vipintm-medium.jpg"
 bitcoin_address: "1DyKgHsw6uwxGq3apy4mwqG6DtCayj4bfm"
