--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,8 @@ _drafts
 vendor
 .bundle
 
-# Added by script - add other file before this.
+# AAdded by script - add other file before this.
 run-cmd.log
 versions.json
+# Added by script - add other file before this.
 help
