--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,15 @@ git:
 branches:
   only:
   - gh-pages     
+
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/29f950afc84c4904e603
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
+
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true 
