--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,14 @@ language: ruby
 rvm:
 - 2.1
 
-before_script:
- - chmod +x ./_scripts/cibuild 
+before_install:
  - cp deploy/Gemfile Gemfile
  - cp deploy/Gemfile.lock Gemfile.lock
  - cp deploy/jekyll-serve jekyll-serve
  - cp deploy/versions.json versions.json
+
+before_script:
+ - chmod +x ./_scripts/cibuild 
 
 script: ./_scripts/cibuild
 
