--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ contact_urls:
 # Jekyll build settings
 paginate: 6
 paginate_path: "/writing/page:num"
-permalink: "/writing/:year/:month/:day/:title"
+permalink: "/writing/:year/:month/:day/:title/"
 sass:
   sass_dir: "/assets/css"
   style: :compressed  
