--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 # http://jekyllrb.com/docs/continuous-integration/
 language: ruby
 rvm:
-- 2.1
+- 2.3.3
 
 before_install:
  - cp deploy/Gemfile Gemfile
@@ -11,6 +11,12 @@ before_install:
 
 before_script:
  - chmod +x ./_scripts/cibuild 
+
+install: 
+ - gem install bundle
+ - gem install jekyll
+ - gem install html-proofer 
+ - bundle install
 
 script: ./_scripts/cibuild
 
