--- a/_data/about.yml
+++ b/_data/about.yml
@@ -5,7 +5,7 @@ about:
      - 'Remix of <a href="http://www.ybrikman.com/">Yevgeniy Brikman</a>, <a href="http://jmcglone.com/">Jonathan McGlone</a>, <a href="https://github.com/philipithomas/jekyll-resume">jekyll-resume</a> and <a href="https://github.com/vrypan/jekyll-post-via-web">Post via web</a>'
      - 'Using icons <a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a>.'
      - 'Better writer by <a href="https://app.grammarly.com/">Grammarly</a>.'
-     - 'The site contents/source <a rel="license" href="/LICENSE.html">License details</a>.'
+     - 'The site contents/source <a rel="license" href="/LICENSE/">License details</a>.'
      - 'Hosted on <a href="https://github.com/thekkedam/vm" title="This site hosted on GitHub">GitHub</a> with <a href="http://pages.github.com/" title="GitHub Pages">GitHub Pages</a>.'
      - 'Marked up with <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fvm.thekkedam.org%2F" title="HTML5 Validator">W3C validated HTML5</a>'
      - '<a href="http://www.w3.org/TR/WCAG20/" title="WCAG 2.0">WCAG 2.0</a> compliant.'
